fix image overflowing container

--- a/styles.css
+++ b/styles.css
@@ -105,5 +105,7 @@ opacity: 0.6742081447963801;
 }
 
 .child {
-  width: 88.1%
+  height: 362px;
+  width: 88.1%;
+  overflow: hidden;
 }
